328/ Improved World generation by adding more abandon structure.
329/ Added some small explanation in code.
330/ Improved Roguelike_TextBox.
331/ Reworked pre HM ore broadsword.
332/ Improved melee swing visual
333/ Reworked StylistScissor.
334/ Reworked Meteor Armor.
335/ Deleted bunch of no hit placeholder.
336/ Slightly buff invisible potion.
337/ Added Many First Strike perk.
338/ Added sprite for Token of Wrath.
339/ Deleted unused shop NPC.
340/ Added small randomize village zone ( mainly for lootint ) gen task.
341/ Reworked AshwoodSword enchantment.
342/ Reworked Musket, Handgun, RedRyder, The Undertaker and FlintlockPistol enchantment.
343/ Slightly reorganized enchantment.
344/ Forgot to wrote but changed build number to 0.0.16.1
345/ Reworked Wooden Sword.
346/ Massively reworked Blood Star, also renamed the weapon to Bloody Stella
347/ Bloody Stella is now a synergy weapon.
348/ Added Draining Veil Blade synergy weapon.
349/ Reworked Heart Pistol, slightly changed Shattered Sky.
350/ Reworked Pulse Rifle synergy bonus.
351/ Some localization works.
352/ Fixed synergy switch check.
353/ Some more adjustment for lootbox to make it functional ( it is functional now but still need polishing ).
354/ Moved some static function outside of lootbox base class to avoid confusion.
355/ Deleted Weapon Upgrade system as a whole due to no longer serving any purpose and have the same function as perk.
356/ Reworked Anklet of the wind.
357/ Added in a way for developer of the mod to tell what dash is being used.
358/ Slightly changed how boss drop lootbox in boss rush mode.
359/ Some fixes to Synergy bonus handler and make some synergy bonus more benefitial.
360/ Fixed skill not showing skill duration and also entirely deleted cool down from the skill system.
361/ Basic implementation of Lootbox appearing in roguelike world chest.
362/ Fixed blizzard storm effect always active.
363/ Change build number to 0.0.17