@@ -1,22 +1,18 @@
-﻿using Roguelike.Common.RoguelikeMode;
+﻿using Roguelike.Common.Mode.RoguelikeMode.RoguelikeBiome.GeneralGenPassess;
+using Roguelike.Common.RoguelikeMode;
 using Roguelike.Common.Utils;
 using SubworldLibrary;
-using System;
 using System.Collections.Generic;
-using System.Linq;
-using System.Text;
-using System.Threading.Tasks;
 using Terraria.IO;
 using Terraria.WorldBuilding;
 
 namespace Roguelike.Common.Mode.RoguelikeMode.RoguelikeBiome;
 internal class Subworld_SlimeWorld : Subworld {
-	public override int Width => 800;
-
-	public override int Height => 2000;
-
+	public override int Width => 2000;
+	public override int Height => 800;
 	public override List<GenPass> Tasks =>
 		new() {
+			new GeneralGenPass_PlayerSpawnLocaltion(.05f, .5f),
 			new GenPass_SlimeWorldSW("Generating Slime",0)
 		};
 }
@@ -25,7 +21,7 @@ public class GenPass_SlimeWorldSW : GenPass {
 	}
 
 	protected override void ApplyPass(GenerationProgress progress, GameConfiguration configuration) {
-		GenerationHelper.Create_WorldBiome(1000, 2500, RogueLikeWorldGen.dict_BiomeBundle[Bid.Slime]);
+		GenerationHelper.Create_WorldBiome(2000, 800, RogueLikeWorldGen.dict_BiomeBundle[Bid.Slime]);
 	}
 }
 
