@@ -8,7 +8,6 @@ using System.Collections.Generic;
 
 namespace Roguelike.Common.Mode.RoguelikeMode.RoguelikeChange.ItemOverhaul.ItemOverhaul.Specific;
 public class Roguelike_PearlWoodSword : GlobalItem {
-	public override bool InstancePerEntity => true;
 	public override bool AppliesToEntity(Item entity, bool lateInstantiation) {
 		return entity.type == ItemID.PearlwoodSword;
 	}
@@ -21,17 +20,17 @@ public class Roguelike_PearlWoodSword : GlobalItem {
 	public override void ModifyTooltips(Item item, List<TooltipLine> tooltips) {
 		ModUtils.AddTooltip(ref tooltips, new(Mod, "", ModUtils.LocalizationText("RoguelikeRework", item.Name)));
 	}
-	int swingCount = 0;
 	public override void HoldItem(Item item, Player player) {
 		if (player.itemAnimation == player.itemAnimationMax && player.ItemAnimationActive) {
 			int damage = player.GetWeaponDamage(item);
-			if (++swingCount >= 3) {
-				swingCount = 0;
+			Roguelike_PearlWoodSword_ModPlayer modplayer = player.GetModPlayer<Roguelike_PearlWoodSword_ModPlayer>();
+			if (++modplayer.swingCount >= 3) {
+				modplayer.swingCount = 0;
 				Vector2 distance = Main.MouseWorld - player.Center;
 				var vel = distance.SafeNormalize(Vector2.Zero);
 				for (int i = 0; i < 6; i++) {
 					var pos = player.Center + vel.Vector2DistributeEvenlyPlus(6, 180, i) * 60;
-					Projectile projectile = Projectile.NewProjectileDirect(player.GetSource_ItemUse(item), pos, vel.SafeNormalize(Vector2.Zero), ModContent.ProjectileType<pearlSwordProj>(), damage, 1, player.whoAmI);
+					Projectile projectile = Projectile.NewProjectileDirect(player.GetSource_ItemUse(item), pos, vel, ModContent.ProjectileType<pearlSwordProj>(), damage, 1, player.whoAmI);
 					projectile.penetrate = 10;
 					projectile.maxPenetrate = 10;
 				}
@@ -41,6 +40,49 @@ public class Roguelike_PearlWoodSword : GlobalItem {
 			if (Main.projectile[proj].ModProjectile is SwordProjectile woodproj)
 				woodproj.ItemIDtextureValue = item.type;
 			Main.projectile[proj].ai[2] = 120;
+			if (modplayer.hitCount >= 60) {
+				modplayer.hitCount = -30;
+				modplayer.duration = 120;
+			}
+		}
+	}
+}
+public class Roguelike_PearlWoodSword_ModPlayer : ModPlayer {
+	public int swingCount = 0;
+	public int hitCount = 0;
+	public int duration = 0;
+	Vector2 lastHitLocation = Vector2.Zero;
+	public override void ResetEffects() {
+		if (Player.HeldItem.type != ItemID.PearlwoodSword) {
+			hitCount = 0;
+			swingCount = 0;
+		}
+		else {
+			duration = ModUtils.CountDown(duration);
+		}
+	}
+	public override void UpdateEquips() {
+		if (duration > 0 && duration % 5 == 0) {
+			int damage = (int)(Player.GetWeaponDamage(Player.HeldItem) * .5f) + 1;
+			Vector2 pos = lastHitLocation + Main.rand.NextVector2CircularEdge(250, 250) * Main.rand.NextFloat(1, 3);
+			var vel = (Main.MouseWorld + Main.rand.NextVector2Circular(20, 20) - pos).SafeNormalize(Vector2.Zero);
+			Projectile projectile = Projectile.NewProjectileDirect(Player.GetSource_ItemUse(Player.HeldItem), pos, vel, ModContent.ProjectileType<pearlSwordProj>(), damage, 1, Player.whoAmI);
+			projectile.penetrate = 2;
+			projectile.maxPenetrate = 2;
+		}
+	}
+	public override void OnHitNPCWithItem(Item item, NPC target, NPC.HitInfo hit, int damageDone) {
+		if (item.type == ItemID.PearlwoodSword) {
+			hitCount++;
+			if (duration <= 0)
+				lastHitLocation = target.Center;
+		}
+	}
+	public override void OnHitNPCWithProj(Projectile proj, NPC target, NPC.HitInfo hit, int damageDone) {
+		if (proj.Check_ItemTypeSource(ItemID.PearlwoodSword)) {
+			hitCount++;
+			if (duration <= 0)
+				lastHitLocation = target.Center;
 		}
 	}
 }
